Change velocity range for G333.23 A3b

--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -149,6 +149,7 @@ pvmap = ${results}/${name}_alma3b_rotation.CH3CN_K3.ra244.96199_dec-50.25295.PA$
 pvnoise = 1.3 mJy/beam
 pvnsigma = 3
 nplot = 3
+ylim = -95 -86 -85 -75 km/s
 
 [G333.46-0.16_alma1]
 name = G333.46-0.16
