--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -30,6 +30,7 @@ yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
 label = ${source} ALMA${alma} PA=${paval}${deg}
+label_position = 0.05 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
@@ -51,6 +52,7 @@ xlim = -0.38 0.38 arcsec
 hlines = -87.04 km/s
 rms = 1.3 mJy/beam
 vmax = 22 mJy/beam
+spine_color = deepskyblue
 
 [G333.23-0.06_alma3b_pvedge]
 loc = 0 0
