--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -117,6 +117,38 @@ hlines = -87.04 km/s
 rms = 1.3 mJy/beam
 vmax = 22 mJy/beam
 
+[G333.23-0.06_alma3b_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.556310718704397 solMass
+model_amplitude = 7.62645785789361
+model_x_0 = 0.038461538461538464
+model_alpha = 0.5
+model_vsys = -87.69053066612848
+model_offset0 = 0.024171613932142094
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[G333.23-0.06_alma3b_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.556310718704397 solMass
+model_amplitude = 7.62645785789361
+model_x_0 = 0.038461538461538464
+model_alpha = 0.5
+model_vsys = -87.69053066612848
+model_offset0 = 0.024171613932142094
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
 [G333.46_alma1_pvmap_rot]
 loc = 1 0
 source = G333.46-0.16
