Set the label position

--- a/configs/plots/papers/group_pv_maps.13.cfg
+++ b/configs/plots/papers/group_pv_maps.13.cfg
@@ -15,6 +15,7 @@ cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
 label_ypad = -0.7
+label_position = 0.03 0.92
 xunit = arcsec
 yunit = km/s
 xname = Offset
