--- a/configs/plots/papers/group_pv_maps.8.cfg
+++ b/configs/plots/papers/group_pv_maps.8.cfg
@@ -30,6 +30,7 @@ yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
 label = ${source} ALMA${alma} PA=${paval}${deg}
+label_position = 0.03 0.92
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
