Fix small mistakes

--- a/configs/plots/papers/group_pv_maps.9.cfg
+++ b/configs/plots/papers/group_pv_maps.9.cfg
@@ -105,6 +105,7 @@ ylim = 10 30 km/s
 hlines = 19.61 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
+label = G14.22-0.50 S ALMA${alma} PA=${paval}${deg}
 markers = -0.048 arcsec 15.7 km/s, 0.045 arcsec 23.9 km/s
 markers_physframe = data
 markers_marker = ^, v
@@ -122,6 +123,7 @@ ylim = 10 30 km/s
 hlines = 19.61 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
+label = G14.22-0.50 S ALMA${alma} PA=${paval}${deg}
 
 [G333.12_alma2_pvmap_rot]
 loc = 3 0
