--- a/configs/plots/papers/group_moments.2.cfg
+++ b/configs/plots/papers/group_moments.2.cfg
@@ -32,6 +32,7 @@ contour_linewidth = 2.0
 contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
+label_position = 0.04 0.92
 enumerate_shift = 12
 enumerate_modulus = 12
 # Units
