Classify orthogonal PVs

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -117,6 +117,7 @@ pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61920_dec-19.93
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
+spine_color = red
 
 [G10.62-0.38_alma1a_infall]
 loc = 0 1
@@ -223,6 +224,7 @@ pvmap = ${results}/${source}_alma1c_rotation.CH3CN_K3.ra272.61971_dec-19.93040.P
 hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 16 mJy/beam
+spine_color = magenta
 
 [G10.62-0.38_alma1c_infall]
 loc = 1 1
@@ -438,6 +440,7 @@ pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.P
 hlines = 35.1 km/s
 rms = 1.1 mJy/beam
 vmax = 45 mJy/beam
+spine_color = red
 
 [G11.92-0.61_alma1a_infall]
 loc = 3 1
