--- a/configs/plots/papers/group_pv_maps.2.cfg
+++ b/configs/plots/papers/group_pv_maps.2.cfg
@@ -222,6 +222,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.P
 hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
+spine_color = red
 
 [G29.96-0.02_alma1_infall]
 loc = 1 1
