--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -438,6 +438,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.
 hlines = -46.9 km/s
 rms = 1.4 mJy/beam
 vmax = 25 mJy/beam
+spine_color = red
 
 [G335.579-0.272_alma1_infall]
 loc = 3 1
