--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -115,6 +115,7 @@ xlim = -0.35 0.35 arcsec
 hlines = -53.1 km/s
 rms = 1.4 mJy/beam
 vmax = 16 mJy/beam
+spine_color = magenta
 
 [G335.579-0.272_alma3_infall]
 loc = 0 1
@@ -220,6 +221,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.
 hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
+spine_color = red
 
 [G335.78+0.17_alma1_infall]
 loc = 1 1
