--- a/configs/plots/papers/group_pv_maps.6.cfg
+++ b/configs/plots/papers/group_pv_maps.6.cfg
@@ -328,6 +328,7 @@ pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA
 hlines = 32.88 km/s
 rms = 1.6 mJy/beam
 vmax = 52 mJy/beam
+spine_color = red
 
 [IRAS_180891732_alma1_infall]
 loc = 2 1
