--- a/configs/plots/papers/group_pv_maps.7.cfg
+++ b/configs/plots/papers/group_pv_maps.7.cfg
@@ -225,6 +225,7 @@ pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA
 hlines = 61.12 km/s
 rms = 1.4 mJy/beam
 vmax = 40 mJy/beam
+spine_color = magenta
 
 [IRAS_18182-1433_alma3_infall]
 loc = 1 1
