--- a/configs/plots/papers/group_pv_maps.8.cfg
+++ b/configs/plots/papers/group_pv_maps.8.cfg
@@ -223,6 +223,7 @@ pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA
 hlines = -6.7 km/s
 rms = 1.7 mJy/beam
 vmax = 20 mJy/beam
+spine_color = red
 
 [NGC_6334_I_N_alma4_infall]
 loc = 1 1
@@ -330,6 +331,7 @@ pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA
 hlines = -7.2 km/s
 rms = 1.7 mJy/beam
 vmax = 38 mJy/beam
+spine_color = red
 
 [NGC_6334_I_N_alma6_infall]
 loc = 2 1
@@ -435,6 +437,7 @@ pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.P
 hlines = 37.9 km/s
 rms = 1.3 mJy/beam
 vmax = 40 mJy/beam
+spine_color = red
 
 [W33A_alma1a_infall]
 loc = 3 1
