Set spine color

--- a/configs/plots/papers/group_pv_maps.5.cfg
+++ b/configs/plots/papers/group_pv_maps.5.cfg
@@ -221,6 +221,7 @@ xlim = -0.55 0.55 arcsec
 hlines = 45.94 km/s
 rms = 1.9 mJy/beam
 vmax = 41 mJy/beam
+spine_color = magenta
 
 [G35.03+0.35_A_alma1_infall]
 loc = 1 1
